--- a/src/templates/library-not-authenticated.pug
+++ b/src/templates/library-not-authenticated.pug
@@ -10,7 +10,7 @@ header.header
         a.nav__link(href='/') Library
         .nav__auth
             button.nav__link(id="signInButton") Sign In
-            button.nav__link(id="signUpButton") Sign Out
+            button.nav__link(id="signUpButton") Sign Up
 main.container
     include filter-list
     +filter-list(filterTypes)
